chore: update .env.example with latest configuration

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # LLM Provider Selection (openai | ollama)
 LLM_PROVIDER=ollama
+LLM_TIMEOUT=120
 
 # OpenAI Configuration (Used if LLM_PROVIDER=openai)
 OPENAI_API_KEY=sk-your-openai-key-here
@@ -16,6 +17,10 @@ EMBEDDINGS_ENDPOINT=http://localhost:11434/v1/embeddings
 EMBEDDINGS_MODEL=nomic-embed-text
 EMBEDDINGS_API_KEY=
 EMBEDDINGS_ENCODING_FORMAT=float
+
+RERANKER_ENDPOINT=https://dashscope.aliyuncs.com/compatible-api/v1/reranks
+RERANKER_MODEL=qwen3-rerank
+RERANKER_API_KEY=sk-your-openai-key-here
 
 # Database Configuration (PostgreSQL)
 DB_HOST=localhost
@@ -53,3 +58,10 @@ EMBEDDING_DIM=1024
 # 远程/已有服务器：只需设置 QDRANT_URL、QDRANT_COLLECTION（和可选 QDRANT_API_KEY）
 QDRANT_URL=http://localhost:6333
 QDRANT_COLLECTION=agent_memory
+
+NEO4J_URL=neo4j://127.0.0.1:7687
+NEO4J_PORT=7687
+NEO4J_USERNAME=neo4j
+NEO4J_PASSWORD=neo4j
+
+ALLOW_DEFAULT_TENANT_FALLBACK=True
