feat: System architecture update
- Add installation documentation (INSTALL.md, INSTALL_zh.md)
- Update .gitignore to exclude user data and IDE files
- Add Automation feature (Backend API + Frontend Vue)
- Add new plugins: Private Butler, UI Designer, Mail Service
- Update Server Kernel and Skills (Skill Integration, Storage)
- Frontend updates (Locales, Router, Components)

--- a/.env.example
+++ b/.env.example
@@ -64,4 +64,11 @@ NEO4J_PORT=7687
 NEO4J_USERNAME=neo4j
 NEO4J_PASSWORD=neo4j
 
+# S3 配置（MinIO）
+S3_ENDPOINT='http://127.0.0.1:9000' 
+S3_ACCESS_KEY_ID='minioadmin'  #在 MinIO 控制台创建的用户
+S3_SECRET_ACCESS_KEY='minioadmin' #用户的 Secret Key
+S3_BUCKET_NAME=seerlord-files
+S3_FORCE_PATH_STYLE=True #必须加，否则 MinIO 可能会报错
+
 ALLOW_DEFAULT_TENANT_FALLBACK=True
