--- a/admin/package.json
+++ b/admin/package.json
@@ -31,7 +31,8 @@
     "vue": "^3.5.24",
     "vue-demi": "0.14.6",
     "vue-i18n": "^11.2.2",
-    "vue-router": "^4.6.4"
+    "vue-router": "^4.6.4",
+    "vue3-sfc-loader": "^0.9.5"
   },
   "devDependencies": {
     "@types/node": "^24.10.4",
