--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,22 @@
 version: '3.8'
 
 services:
+  app:
+    build: .
+    container_name: seerlord_app
+    ports:
+      - "8000:8000"
+    environment:
+      # Override DB host to point to the docker service name
+      - DATABASE_URL=postgresql://user:password@postgres:5432/seerlord
+      # You can add other keys here or use a .env file
+    env_file:
+      - .env
+    depends_on:
+      postgres:
+        condition: service_healthy
+    restart: unless-stopped
+
   # 1. PostgreSQL (Relational Data & LangGraph Checkpoints)
   postgres:
     image: postgres:16-alpine
@@ -20,15 +36,5 @@ services:
       timeout: 5s
       retries: 5
 
-  # 2. Qdrant (Optional: Only if running locally, otherwise use external URL)
-  # qdrant:
-  #   image: qdrant/qdrant
-  #   container_name: seerlord_qdrant
-  #   ports:
-  #     - "6333:6333"
-  #   volumes:
-  #     - qdrant_data:/qdrant/storage
-
 volumes:
   postgres_data:
-  # qdrant_data:
